--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<header>
 			<h1>
-				<a><img src="img/logo.png" alt="ロゴ：MdN DIVE" type="max-width: 100%;"></a>
+				<a><img src="img/logo.png" alt="ロゴ:MdN DIVE" type="max-width: 100%;"></a>
 			</h1>
 		</header>
 		<main>
